[project]
name = "infly"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic",
  "setproctitle>=1.3.7",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["infly*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
