[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infly"
dynamic = ["version"]
requires-python = ">=3.12"
description = "A lightweight and efficient infer runtime."
readme = "README.md"
license = { "text" = "MIT" }
dependencies = [
  "setproctitle>=1.3.7",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["infly*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "infly.__version__" }
