[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infly"
dynamic = ["version"]
requires-python = ">=3.12"
description = "A lightweight, efficient multi-process scheduling runtime."
readme = "README.md"
license = { "text" = "MIT" }
dependencies = ["setproctitle>=1.3.7"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["infly*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "infly.__version__" }

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
exclude = [".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
exclude = [".venv", "dist", "build", "__pycache__", "tests", "**/node_modules", "**/.*"]
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedCallResult = false

[tool.ruff.lint.pydocstyle]
convention = "google"